force-app/main/default/objects/Case/fields/nd_Pledge_Gift_Status__c.field-meta.xml
<CustomField>
    <fullName>nd_Pledge_Gift_Status__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <label>Pledge/Gift Status</label>
    <type>Text</type>
</CustomField>