force-app/main/default/objects/Case/fields/nd_Primary_Department__c.field-meta.xml
<CustomField>
    <fullName>nd_Primary_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.ND_Parent_Division__c</field>
            <operation>equals</operation>
            <valueField>$Source.nd_Primary_Division__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Cases (Primary Department)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>