force-app/main/default/objects/Case/fields/nd_Primary_Division__c.field-meta.xml
<CustomField>
    <fullName>nd_Primary_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Division</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.ucinn_ascendv2__Type__c</field>
            <operation>equals</operation>
            <value>Designation Division</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Individual Stewardship Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>