force-app/main/default/objects/Case/fields/nd_Printed_Letter__c.field-meta.xml
<CustomField>
    <fullName>nd_Printed_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Printed Letter</label>
    <type>Checkbox</type>
</CustomField>