force-app/main/default/objects/Case/fields/nd_Process_Step__c.field-meta.xml
<CustomField>
    <fullName>nd_Process_Step__c</fullName>
    <label>Process Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Drafting</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Executive Approval</fullName>
            </value>
            <value>
                <fullName>Ready to Send</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>