force-app/main/default/objects/Case/fields/nd_Recurring_Frequency__c.field-meta.xml
<CustomField>
    <fullName>nd_Recurring_Frequency__c</fullName>
    <label>Recurring Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>