force-app/main/default/objects/Case/fields/nd_Student_Upload__c.field-meta.xml
<CustomField>
    <fullName>nd_Student_Upload__c</fullName>
    <label>Student Upload</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>