force-app/main/default/objects/Case/fields/ND_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>ND_Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blessed rosary</fullName>
            </value>
            <value>
                <fullName>Blessing</fullName>
            </value>
            <value>
                <fullName>Building/Space Recognition</fullName>
            </value>
            <value>
                <fullName>Campaign Gift</fullName>
            </value>
            <value>
                <fullName>Capital Report</fullName>
            </value>
            <value>
                <fullName>Celebration</fullName>
            </value>
            <value>
                <fullName>Chair Medallion</fullName>
            </value>
            <value>
                <fullName>Coach Whistle</fullName>
            </value>
            <value>
                <fullName>Commencement Stole</fullName>
            </value>
            <value>
                <fullName>Custom Photobook</fullName>
            </value>
            <value>
                <fullName>Custom token</fullName>
            </value>
            <value>
                <fullName>Dedication</fullName>
            </value>
            <value>
                <fullName>Dedication photobook</fullName>
            </value>
            <value>
                <fullName>Dedication Token</fullName>
            </value>
            <value>
                <fullName>Digital Display</fullName>
            </value>
            <value>
                <fullName>Endowed Chair Wall</fullName>
            </value>
            <value>
                <fullName>Event Gift</fullName>
            </value>
            <value>
                <fullName>Event Photobook</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Financial report</fullName>
            </value>
            <value>
                <fullName>Founders Wall</fullName>
            </value>
            <value>
                <fullName>Gift announcement</fullName>
            </value>
            <value>
                <fullName>Groundbreaking</fullName>
            </value>
            <value>
                <fullName>Impact communication</fullName>
            </value>
            <value>
                <fullName>Impact Report</fullName>
            </value>
            <value>
                <fullName>Individual public recognition display</fullName>
            </value>
            <value>
                <fullName>Mass</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>Other Gift</fullName>
            </value>
            <value>
                <fullName>Press Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>