force-app/main/default/objects/Case/fields/nd_Total_DAF_Transfers_Override__c.field-meta.xml
<CustomField>
    <fullName>nd_Total_DAF_Transfers_Override__c</fullName>
    <label>Total DAF Transfers Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>