force-app/main/default/objects/Case/fields/nd_Total_Gifts_to_Endowed_Fund_Override__c.field-meta.xml
<CustomField>
    <fullName>nd_Total_Gifts_to_Endowed_Fund_Override__c</fullName>
    <label>Total Gifts to Endowed Fund Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>