force-app/main/default/objects/Case/fields/nd_University_Match__c.field-meta.xml
<CustomField>
    <fullName>nd_University_Match__c</fullName>
    <label>University Match</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>