force-app/main/default/objects/Case/fields/Next_Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Next_Fundraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Fundraiser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>