force-app/main/default/objects/Case/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obituary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>