force-app/main/default/objects/Case/fields/On_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On Behalf Of</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>