force-app/main/default/objects/Case/fields/Out_of_Region__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Region__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Region</label>
    <type>Checkbox</type>
</CustomField>