force-app/main/default/objects/Case/fields/Preferred_Address_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Address_State_Code__c</fullName>
    <formula>Contact.ucinn_ascendv2__Preferred_Address_State__c</formula>
    <label>Preferred Address State Code</label>
    <type>Text</type>
</CustomField>