force-app/main/default/objects/Case/fields/Primary_Solicitor_of_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Primary_Solicitor_of_Prospect__c</fullName>
    <formula>Account.ucinn_ascendv2__PRM__r.FirstName &amp; &quot; &quot; &amp; Account.ucinn_ascendv2__PRM__r.LastName</formula>
    <label>Primary Solicitor of Prospect</label>
    <type>Text</type>
</CustomField>