force-app/main/default/objects/Case/fields/PRM__c.field-meta.xml
<CustomField>
    <fullName>PRM__c</fullName>
    <formula>Account.ucinn_ascendv2__PRM__r.FirstName &amp; &quot; &quot; &amp;  Account.ucinn_ascendv2__PRM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRM</label>
    <type>Text</type>
</CustomField>