force-app/main/default/objects/Case/fields/Prospect_Capacity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Capacity_Rating__c</fullName>
    <formula>Account.ND_Wealth_Rating__c</formula>
    <label>Prospect Capacity Rating</label>
    <type>Text</type>
</CustomField>