force-app/main/default/objects/Case/fields/Prospect_Category__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Category__c</fullName>
    <label>Prospect Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prospect_Category</valueSetName>
    </valueSet>
</CustomField>