force-app/main/default/objects/Case/fields/Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Stage__c</fullName>
    <label>Prospect Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prospect_Stage</valueSetName>
    </valueSet>
</CustomField>