force-app/main/default/objects/Case/fields/Prospect_Team__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect Team</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>