force-app/main/default/objects/Case/fields/Reason_for_Drop__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Drop__c</fullName>
    <label>Reason for Drop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fundraiser Disqualified</fullName>
                <label>Fundraiser Disqualified as Leadership Donor</label>
            </value>
            <value>
                <fullName>Location Issue</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Timing Not Right - Personal</fullName>
                <label>Timing Not Right Suitable for LAG- Personal</label>
            </value>
            <value>
                <fullName>ND Sensitive Issue - University Related</fullName>
            </value>
            <value>
                <fullName>Next Generation</fullName>
            </value>
            <value>
                <fullName>Rising Star</fullName>
            </value>
            <value>
                <fullName>Liquidity</fullName>
            </value>
            <value>
                <fullName>Timing Not Right, NOT Suitable for LAG - personal-related</fullName>
            </value>
            <value>
                <fullName>Does Not Want to Be Contacted by ND</fullName>
                <isActive>false</isActive>
                <label>Does Not Want to Be Contacted by ND</label>
            </value>
            <value>
                <fullName>Fundraiser Transition</fullName>
                <isActive>false</isActive>
                <label>Fundraiser Transition</label>
            </value>
            <value>
                <fullName>Fundraiser transition, OK to reassign</fullName>
                <isActive>false</isActive>
                <label>Fundraiser transition, OK to reassign</label>
            </value>
            <value>
                <fullName>No Future Giving Expected</fullName>
                <isActive>false</isActive>
                <label>No Future Giving Expected</label>
            </value>
            <value>
                <fullName>No ND Connection</fullName>
                <isActive>false</isActive>
                <label>No ND Connection</label>
            </value>
            <value>
                <fullName>Non-responsive prospect, OK to reassign</fullName>
                <isActive>false</isActive>
                <label>Non-responsive prospect, OK to reassign</label>
            </value>
            <value>
                <fullName>Portfolio Downsize</fullName>
                <isActive>false</isActive>
                <label>Portfolio Downsize</label>
            </value>
            <value>
                <fullName>Portfolio downsizing, OK to reassign</fullName>
                <isActive>false</isActive>
                <label>Portfolio downsizing, OK to reassign</label>
            </value>
            <value>
                <fullName>Prospect location issue, OK to reassign</fullName>
                <isActive>false</isActive>
                <label>Prospect location issue, OK to reassign</label>
            </value>
            <value>
                <fullName>Qualified not leadership, don&apos;t reassign</fullName>
                <isActive>false</isActive>
                <label>Qualified not leadership, don&apos;t reassign</label>
            </value>
            <value>
                <fullName>Retread, revisit at future date</fullName>
                <isActive>false</isActive>
                <label>Retread, revisit at future date</label>
            </value>
            <value>
                <fullName>Rising Star, revisit at future date</fullName>
                <isActive>false</isActive>
                <label>Rising Star, revisit at future date</label>
            </value>
            <value>
                <fullName>Sensitive issue, revisit at future date</fullName>
                <isActive>false</isActive>
                <label>Sensitive issue, revisit at future date</label>
            </value>
            <value>
                <fullName>Timing not right, revisit at future date</fullName>
                <isActive>false</isActive>
                <label>Timing not right, revisit at future date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>