force-app/main/default/objects/Case/fields/Region_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Region_Mismatch__c</fullName>
    <formula>(TEXT(Fundraiser__r.ND_Group_Region__c)) !=  Account.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Mismatch</label>
    <type>Checkbox</type>
</CustomField>