force-app/main/default/objects/Case/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of Region</fullName>
            </value>
            <value>
                <fullName>Portfolio Full</fullName>
            </value>
            <value>
                <fullName>Different Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>