force-app/main/default/objects/Case/fields/Request_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Request_Purpose__c</fullName>
    <label>Request Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Screening</fullName>
            </value>
            <value>
                <fullName>Update Capacity</fullName>
            </value>
            <value>
                <fullName>Private Company Valuation</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Other Record Update</fullName>
            </value>
            <value>
                <fullName>Event Research</fullName>
                <isActive>false</isActive>
                <label>Event Research</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>