force-app/main/default/objects/Case/fields/Research_Case__c.field-meta.xml
<CustomField>
    <fullName>Research_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Research Requests</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Research Case)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>