force-app/main/default/objects/Case/fields/SRD__c.field-meta.xml
<CustomField>
    <fullName>SRD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SRD</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Please select a Senior Regional Director</errorMessage>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Senior Regional Director</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>