force-app/main/default/objects/Case/fields/SRD_Decision__c.field-meta.xml
<CustomField>
    <fullName>SRD_Decision__c</fullName>
    <label>SRD Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>