force-app/main/default/objects/Case/fields/Strategy_Change__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Change__c</fullName>
    <inlineHelpText>How will this change your strategy on the prospect?</inlineHelpText>
    <label>Strategy Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>