force-app/main/default/objects/Case/recordTypes/Assignment_Request.recordType-meta.xml
<RecordType>
    <fullName>Assignment_Request</fullName>
    <active>true</active>
    <businessProcess>Assignment Process</businessProcess>
    <label>Assignment Request</label>
</RecordType>