force-app/main/default/objects/Case/recordTypes/Endowment_Report.recordType-meta.xml
<RecordType>
    <fullName>Endowment_Report</fullName>
    <active>true</active>
    <businessProcess>Endowment Report</businessProcess>
    <label>Endowment Report</label>
</RecordType>