force-app/main/default/objects/Case/recordTypes/Individual_Stewardship.recordType-meta.xml
<RecordType>
    <fullName>Individual_Stewardship</fullName>
    <active>true</active>
    <businessProcess>Individual Stewardship</businessProcess>
    <description>Used for individual stewardship</description>
    <label>Individual Stewardship</label>
</RecordType>