force-app/main/default/objects/Case/recordTypes/Research_Requests.recordType-meta.xml
<RecordType>
    <fullName>Research_Requests</fullName>
    <active>true</active>
    <businessProcess>Research Requests</businessProcess>
    <description>Case management for research</description>
    <label>Research Requests</label>
</RecordType>