force-app/main/default/objects/Case/recordTypes/Stewardship_Acknowledgment.recordType-meta.xml
<RecordType>
    <fullName>Stewardship_Acknowledgment</fullName>
    <active>true</active>
    <businessProcess>Stewardship Acknowledgment</businessProcess>
    <label>Stewardship Acknowledgment</label>
</RecordType>