force-app/main/default/objects/Case/recordTypes/Sundry_Designations.recordType-meta.xml
<RecordType>
    <fullName>Sundry_Designations</fullName>
    <active>true</active>
    <businessProcess>Sundry Designation</businessProcess>
    <description>Case record type to process pledge payments made to a Sundry Designation</description>
    <label>Sundry Designations</label>
</RecordType>