force-app/main/default/objects/Case/validationRules/Endowment_Report_Early_Deadline_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Endowment_Report_Early_Deadline_Due_Date</fullName>
    <active>true</active>
    <description>If Early Deadline is Complete, then Early Deadline Due Date is required.</description>
    <errorConditionFormula>TEXT( nd_Early_Deadline__c ) = &quot;Complete&quot; &amp;&amp;  ISBLANK(nd_Early_Deadline_Due_Date__c)</errorConditionFormula>
    <errorMessage>If Early Deadline is Complete, then Early Deadline Due Date is required.</errorMessage>
</ValidationRule>