force-app/main/default/objects/Case/validationRules/Individual_Stewardship_Asset_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Individual_Stewardship_Asset_Closed</fullName>
    <active>true</active>
    <description>To close this case, please create a Stewardship Item.</description>
    <errorConditionFormula>nd_Case_Record_Type_Dev_Name__c = &quot;Individual_Stewardship&quot; &amp;&amp;
 TEXT(Status) = &quot;Closed&quot; &amp;&amp;  ISBLANK(AssetId)</errorConditionFormula>
    <errorMessage>To close this case, please create a Stewardship Item.</errorMessage>
</ValidationRule>