force-app/main/default/objects/Case/listViews/Account_Specialist_Case.listView-meta.xml
<ListView>
    <fullName>Account_Specialist_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Account Specialist</label>
    <queue>Account_Specialist</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>