force-app/main/default/objects/Case/listViews/All_Acknowledgement_Cases.listView-meta.xml
<ListView>
    <fullName>All_Acknowledgement_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Primary_Solicitor_of_Prospect__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>nd_Pledge_Gift_Amount__c</columns>
    <columns>nd_Executive_Approval__c</columns>
    <columns>nd_Link_to_Letter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Stewardship_Acknowledgment</value>
    </filters>
    <label>All Acknowledgement Cases</label>
</ListView>