force-app/main/default/objects/Case/listViews/All_Closed_Research_Requests.listView-meta.xml
<ListView>
    <fullName>All_Closed_Research_Requests</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Primary_Solicitor_of_Prospect__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Capacity_Rating__c</columns>
    <columns>Preferred_Address_State_Code__c</columns>
    <columns>Household_PRM_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Research_Requests</value>
    </filters>
    <label>All Closed Research Requests</label>
</ListView>