force-app/main/default/objects/Case/listViews/All_Endowment_Report_Cases.listView-meta.xml
<ListView>
    <fullName>All_Endowment_Report_Cases</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>nd_Designation__c</columns>
    <columns>nd_Designation_Steward_Reporting_Code__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>nd_Impact_Statement_Status__c</columns>
    <columns>nd_Student_Upload__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Endowment_Report</value>
    </filters>
    <label>All Endowment Report Cases</label>
</ListView>