force-app/main/default/objects/Case/listViews/All_Individualized_Stewardship_Cases.listView-meta.xml
<ListView>
    <fullName>All_Individualized_Stewardship_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ND_Subcategory__c</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>nd_Primary_Division__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Primary_Solicitor_of_Prospect__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Individual_Stewardship</value>
    </filters>
    <label>All Individualized Stewardship Cases</label>
</ListView>